--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       rel="stylesheet"
     />
 
-    <title>Frontend Mentor | Room homepage</title>
+    <title>Room homepage</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="styles.css" rel="stylesheet" />
   </head>
-  <body class="overflow-x-hidden">
+  <body class="overflow-x-hidden w-full">
     <div class="mobilemenubg md:hidden">
       <div
         class="flex justify-between px-8 w-full top-0 py-12 items-center nav"
@@ -240,8 +240,7 @@
 
     <script>
       const swiper = new Swiper(".swiper", {
-        effect: "flip",
-        grabCursor: true,
+       
         // If we need pagination
         pagination: {
           el: ".swiper-pagination",
